1. 完成后端数据库植入连接用户模型 2. 完成前端登录页以及解析用户信息token

--- a/ScadeSuiteWeb.Server/appsettings.json
+++ b/ScadeSuiteWeb.Server/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLiteDBPath": "Data Source=Database\\Data\\App.db"
+  },
+  "DatabaseOptions": {
+    "CommandTimeout": 30,
+    "EnableDetailedErrors": true,
+    "EnableSensitiveDataLogging": true
+  }
 }
