--- a/ScadeSuiteWeb.Server/appsettings.json
+++ b/ScadeSuiteWeb.Server/appsettings.json
@@ -13,5 +13,11 @@
     "CommandTimeout": 30,
     "EnableDetailedErrors": true,
     "EnableSensitiveDataLogging": true
+  },
+  "JWT": {
+    "Key": "526XL5L6L42EAP5XFB624GDCJXXI4MRT",
+    "Issuer": "XuanIT",
+    "Audience": "XuanIT User",
+    "ExpiryInHours": 120
   }
 }
