--- a/ScadeSuiteWeb.Server/ScadeSuiteWeb.Server.csproj
+++ b/ScadeSuiteWeb.Server/ScadeSuiteWeb.Server.csproj
@@ -11,12 +11,18 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ScadeSuiteWeb.Client\ScadeSuiteWeb.Client.csproj" />
     <ProjectReference Include="..\ScadeSuiteWeb.Shared\ScadeSuiteWeb.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\SuiteModels\fafdaf\" />
+    <Folder Include="Resources\SuiteModels\frfaaa\" />
   </ItemGroup>
 
 </Project>
