更改使用z diagram 渲染画布

--- a/ScadeSuiteWeb.Client/ScadeSuiteWeb.Client.csproj
+++ b/ScadeSuiteWeb.Client/ScadeSuiteWeb.Client.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.7.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+    <PackageReference Include="Z.Blazor.Diagrams" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
